# agi

./: CMakeLists.txt  Dockerfile  README.md  compose.yml  input_schema.txt  job.cpp  job.h  machine.cpp  machine.h  main.cpp  sched_converter.kdev4  sorter.cpp  sorter.h
